--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 <meta property="og:locale" content="en_US" />
 <meta name="description" content="An easy to use blogging platform with support for Jupyter Notebooks." />
 <meta property="og:description" content="An easy to use blogging platform with support for Jupyter Notebooks." />
-<link rel="canonical" href="https://boaarmpit.github.io/fastpages_test/" />
-<meta property="og:url" content="https://boaarmpit.github.io/fastpages_test/" />
+<link rel="canonical" href="https://bryn.pro/fastpages_test/" />
+<meta property="og:url" content="https://bryn.pro/fastpages_test/" />
 <meta property="og:site_name" content="fastpages" />
-<meta property="og:image" content="https://boaarmpit.github.io/fastpages_test/images/logo.png" />
+<meta property="og:image" content="https://bryn.pro/fastpages_test/images/logo.png" />
 <script type="application/ld+json">
-{"description":"An easy to use blogging platform with support for Jupyter Notebooks.","url":"https://boaarmpit.github.io/fastpages_test/","@type":"WebSite","headline":"fastpages","image":"https://boaarmpit.github.io/fastpages_test/images/logo.png","name":"fastpages","@context":"https://schema.org"}</script>
+{"description":"An easy to use blogging platform with support for Jupyter Notebooks.","url":"https://bryn.pro/fastpages_test/","@type":"WebSite","headline":"fastpages","image":"https://bryn.pro/fastpages_test/images/logo.png","name":"fastpages","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
-<link rel="stylesheet" href="/fastpages_test/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://boaarmpit.github.io/fastpages_test/feed.xml" title="fastpages" /><link rel="shortcut icon" type="image/x-icon" href="/fastpages_test/images/favicon.ico"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Primer/15.2.0/primer.css" integrity="sha512-xTz2ys4coGAOz8vuV1NcQBkgVmKhsSEtjbqyMJbBHRplFuvKIUo6xhLHpAyPt9mfR6twHJgn9OgVLuqOvjeBhg==" crossorigin="anonymous" />
+<link rel="stylesheet" href="/fastpages_test/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://bryn.pro/fastpages_test/feed.xml" title="fastpages" /><link rel="shortcut icon" type="image/x-icon" href="/fastpages_test/images/favicon.ico"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Primer/15.2.0/primer.css" integrity="sha512-xTz2ys4coGAOz8vuV1NcQBkgVmKhsSEtjbqyMJbBHRplFuvKIUo6xhLHpAyPt9mfR6twHJgn9OgVLuqOvjeBhg==" crossorigin="anonymous" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
 
 <script>
